imagens que se repetem 4 novos comandos

--- a/fundo02.html
+++ b/fundo02.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens que se repetem</title>
+    <style>
+        body{
+            background-image: url('https://img.freepik.com/psd-premium/mascote-de-cabeca-de-lobo-em-fundo-transparente_1026556-27236.jpg');
+            background-size: 50px;
+            background-repeat: no-repeat;
+            /*background-repeat: repeat-y; vertical;
+            background-repeat: repeat-x; horinzontal*/
+        }
+
+    </style>
 </head>
 <body>
-    
+    <h1>imagens se repetem</h1>
 </body>
 </html>
