simplificação de background

--- a/fundo05.html
+++ b/fundo05.html
@@ -10,7 +10,15 @@
             background-image: url('bugdroid.png');
             background-position: center center;
             background-repeat: no-repeat;
-            background-size: cover;
+            background-size: cover;/*container*/
+            /*outro vídeo*/
+            background-attachment: fixed;/*Junto com o cover dá para ver até no celular*/
+            
+            /*Shorthand - background
+            color> image > position > repeat > [size] > attachment
+            SImplificação:  
+            background: black url("") center center no-repeat fixed; 
+            background-size: cover*/
         }
         main{
             background-color: white;
