colocar um conteiner com conteudo e saber mover-lo

--- a/fundo03.html
+++ b/fundo03.html
@@ -6,7 +6,7 @@
     <title>Posição de imagens de fundo</title>
     <style>
         div.bloco{
-            background-image: url('imagens/._wallpaper003.jpg');
+            background-image: url('imagens/wallpaper003.jpg');
             height: 200px;
             border: 1px solid black;
             border-radius: 5px;
