--- a/fundo01.html
+++ b/fundo01.html
@@ -19,7 +19,7 @@
             background-image: linear-gradient(to right, blue, red);
         }
         div#q3{
-           background-image: url('imagens/ ._pattern004.png'); 
+           background-image: url('imagens/pattern004.png'); 
         }
     </style>
 </head>
