--- a/fundo05.html
+++ b/fundo05.html
@@ -7,7 +7,7 @@
     <style>
         body{
             background-color: black;
-            background-image: url('bugdroid.png');
+            background-image: url('imagens/pattern004.png');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;/*container*/
