--- a/tabela/desafiotabela.html
+++ b/tabela/desafiotabela.html
@@ -29,14 +29,14 @@
     <table>
         <tr>
             <td colspan="2">1</td>
-            <td>2</td>
-            <td>3</td>
+            
+            <td colspan="2">3</td>
         </tr>
 
         <tr>
             <td>4</td>
             <td>5</td>
-            <td>3</td>
+            
             <td>6</td>
         </tr>
 
